# thehive-fastmcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/thehive_mcp/: __init__.py  server.py  thehive_client.py
tests/: test_thehive_client.py
